2002-10-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc*.fig: Improve pictures.
	* doc/api/malloc.dox: fix LaTeX pic widths.

2002-10-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Include some pictures.
	* doc/api/Makefile.am: pictures' infrastructure.
	* doc/api/doxygen.conf.in: pictures' infrastructure.
	* doc/api/malloc*.fig: picture sources.

2002-10-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Explain malloc details.
	* include/stdlib.h: refer to malloc explanation.
	* doc/api/Makefile.am: include malloc.dox.
	* doc/api/sections.dox: refer to malloc explanation.

2002-10-22  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* avr-libc.spec.in: Require doxygen >= 1.2.16 for build.

2002-10-20  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* reconf: Make compatible with RedHat-8.0 autotools.

2002-10-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: make doxygen work.

2002-10-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfprintf.c: implement %p.
	* include/stdio.h: document %p.

2002-10-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Makefile.am: add hooks for libprintf_*.a.
	* libc/stdio/Makefile.am: ditto.
	* libc/stdio/vfprintf.c: add printf levels.

2002-10-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.in libc/Makefile.am: wire stdio
		into the infrastructure.
	* include/stdio.h: new file.
	* libc/stdio/Makefile.am: new file.
	* libc/stdio/fclose.c: new file.
	* libc/stdio/fdevopen.c: new file.
	* libc/stdio/fprintf.c: new file.
	* libc/stdio/fprintf_p.c: new file.
	* libc/stdio/fputc.c: new file.
	* libc/stdio/printf.c: new file.
	* libc/stdio/printf_p.c: new file.
	* libc/stdio/snprintf.c: new file.
	* libc/stdio/snprintf_p.c: new file.
	* libc/stdio/sprintf.c: new file.
	* libc/stdio/sprintf_p.c: new file.
	* libc/stdio/stdio_private.h: new file.