@@ -63,7 +63,7 @@ functions.
 The pictures shown in this document represent possible typical
 situations, where the RAM locations refer to an ATmega128.
 
-\image html malloc-std.gif "RAM map of a device with internal RAM"
+\image html malloc-std.png "RAM map of a device with internal RAM"
 \image latex malloc-std.eps "RAM map of a device with internal RAM" width=7.5cm
 
 Finally, there's a challenge to make the memory allocator not too
@@ -130,7 +130,7 @@ See \ref harvard_arch "explanation" for offset 0x800000.
 See the chapter about \ref gcc_minusW "using gcc" for the \c -Wl
 options.
 
-\image html malloc-x1.gif "Internal RAM: stack only, external RAM: variables and heap"
+\image html malloc-x1.png "Internal RAM: stack only, external RAM: variables and heap"
 \image latex malloc-x1.eps "Internal RAM: stack only, external RAM: variables and heap" width=12cm
 
 If only dynamic memory should be placed in external RAM, while keeping
@@ -140,7 +140,7 @@ the variables in internal RAM, the following could be used.
 avr-gcc ... -Wl,--defsym=__heap_start=0x802000,--defsym=__heap_end=0x803fff ...
 \endcode
 
-\image html malloc-x2.gif "Internal RAM: variables and stack, external RAM: heap"
+\image html malloc-x2.png "Internal RAM: variables and stack, external RAM: heap"
 \image latex malloc-x2.eps "Internal RAM: variables and stack, external RAM: heap" width=12cm
 
 If \c __malloc_heap_end is 0, the allocator attempts to detect the
